--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
 
         </div>
 
-        <div class="map"></div>
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3795.874157971492!2d25.822418510384036!3d-17.938022482975402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x194fe5886696968f%3A0xd8583d4d392d6257!2sMiombo%20Mews%20Holiday%20Apartments!5e0!3m2!1sen!2szw!4v1742429062282!5m2!1sen!2szw" width="600" height="450" style="border:0; width: 100%; height: 100%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
+        </div>
         <div class="footer">
             <div class="socials__container">
                 <div class="social"><img class="social" src="facebook.PNG" alt=""></div>
